Terminando de arreglar sección Imprimir

--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -253,7 +253,7 @@ footer {
     .modelado3d {
         margin: 40px 0;
         height: max-content;
-        background-image: url(/img/Modelado3d.jpg);
+        background-image: url(../img/Modelado3d.jpg);
         background-size: cover;
         background-position: center;
 
@@ -305,7 +305,7 @@ footer {
     .impresion3d {
         margin: 40px 0;
         height: max-content;
-        background-image: url(/img/Impresion3d.jpg);
+        background-image: url(../img/Impresion3d.jpg);
         background-size: cover;
         background-position: center;
 
