--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -25,7 +25,8 @@ header {
             flex-direction: row-reverse;
             font-family: "montserrat";
             .navbar-nav {
-                margin-right: 50px;
+                margin-right: 15px;
+                text-align: right;
             }
         }
     }
