--- a/scss/__vars.scss
+++ b/scss/__vars.scss
@@ -1,6 +1,6 @@
 $titleColor: #213E3B;
 $btnColor: #41AEA9;
-$footerColor: darkslategray;
+$footerColor: rgb(47, 79, 79);
 $bgColor: #fcfcfc;
 $navBarColor: rgba(237, 248, 255, 0.8);
 $btnTextColor: #f4f4f4;
